clang/test/BSC/Negative/OwnedStruct/memoryleak/destructor/desturctor-param.cbs
// RUN: %clang_cc1 -verify %s
owned struct A {
    public:
    owned int a;
    ~A(A this) {
    }// expected-error {{this.a's memory will leak at the end of scope}}
};
int main() {
    A a ={1};
    return 0;
}
